added modification from other file

--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 </head>
 <body>
   <div class="container">
-    <div class="card-grey">
+    <div class="card-white">
       <h1>Hello, I'm Eryk</h1>
       <img src="image/Profil_pic.jpg" alt="Profil-img" class="profil-pic-round">
       <h2>Job: Programmer 💻</h2>
-      <p>I like coding, discovering new concept/challenge while coding is what I like the most and playing video game in my free time</p>
+      <p>I like coding ! Discovering new concept/challenge while coding is what I like the most and when I have free time I like to play video game</p>
       <a href="http://lewagon.com" target="_blank" rel="noopener noreferrer" class="btn-red">Le wagon</a>
     </div>
     <div class="card-grey">
       <h2>Follow me on :</h2>
       <li class="list-inline ">
         <ul>
-          <a href="https://github.com/exyk5312" class = "icon-size"><i class="fab fa-github"></i></a>
+          <a href="https://github.com/exyk5312"><i class="fab fa-github"></i></a>
         </ul>
       </li>
     </div>
