removed class card-grey

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <p>I like coding ! Discovering new concept/challenge while coding is what I like the most and when I have free time I like to play video game</p>
       <a href="http://lewagon.com" target="_blank" rel="noopener noreferrer" class="btn-red">Le wagon</a>
     </div>
-    <div class="card-grey">
+    <div class="card-white">
       <h2>Follow me on :</h2>
       <li class="list-inline ">
         <ul>
